# aspect-ts-repro

./: README.md
custom_rule/: BUILD.bazel  WORKSPACE  rule.bzl
typescript_project/: .gitignore  BUILD.bazel  WORKSPACE  index.ts  package.json  pnpm-lock.yaml  repositories.bzl  tsconfig.json
